# atools

./: .gitignore  .test-plan.md  AGENTS.md  Cargo.toml  index.html  load_test.py  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  pasteboardpro-cross-host.yml  publish-macos.yml
crates/atools-api-shim/: Cargo.toml
crates/atools-api-shim/src/: dispatch.rs  handler.rs  handler_wrapper.rs  lib.rs
crates/atools-api-shim/tests/: handler_tests.rs
crates/atools-core/: Cargo.toml  IMPLEMENTATION_SUMMARY.md
crates/atools-core/examples/: benchmark_database.rs  benchmark_pasteboard.rs  benchmark_pasteboard_search.rs
crates/atools-core/src/: agent.rs  capability.rs  config.rs  db.rs  error.rs  lib.rs  matcher.rs  mcp.rs  memory.rs  models.rs  pasteboard.rs  skill.rs  task_run.rs  utils.rs
crates/atools-core/tests/: agent_tests.rs  capability_tests.rs  matcher_performance_tests.rs  matcher_tests.rs  memory_tests.rs  models_tests.rs  pasteboard_tests.rs  skill_tests.rs  task_run_tests.rs
crates/atools-plugin/: Cargo.toml
crates/atools-plugin/src/: bridge.rs  context.rs  ipc_handler.rs  lib.rs  loader.rs  runtime.rs
crates/atools-plugin/src/sidecar/: json_rpc.rs  mcp_stdio.rs  mod.rs  supervisor.rs
crates/atools-plugin/tests/: loader_tests.rs  sidecar_tests.rs
docs/: agent-mcp-client.md  capabilities.md  execution-memory.md  macos-smoke-checklist.md  native-product-acceptance-2026-07-24.md  north-star-delivery-audit.md  pasteboardpro-delivery-audit.md  pasteboardpro-macos-smoke-report.schema.json  performance-benchmark.md  skills.md  ui-ztools-restore-checklist.md  ztools-top30-hybrid-runtime-delivery.md
docs/architecture/: adr-0001-hybrid-plugin-runtime.md
examples/hello-world/: index.html  plugin.json  preload.js
output/: ztools-market-top30-activation-plan.json  ztools-market-top30-browser-smoke-report.json  ztools-market-top30-compatibility-report.json  ztools-market-top30-report.json  ztools-market-top30-runtime-report.json  ztools-market-top30-ui-host-smoke-report.json  ztools-plugin-activation-plan.json  ztools-plugin-compatibility-report.json  ztools-plugin-runtime-sample-report.json  ztools-plugin-ui-host-smoke-report.json
output/ztools-ui-host-real-entry-fixtures/: 001-calculation-paper-calc.html  002-ztools-developer-plugin-ui-router.html  003-latex-ocr-latex-editor.html  004-2048-2048.html  005-ai-automation-workbench-ai-automation-workbench.html  005-cron-cron.html  006-content-workbench-content-workbench.html  006-developer-codec-tools-codec-tools.html  007-cron-cron.html  007-ibox-wallpaper-ibox.html  008-dev-data-workbench-dev-data-workbench.html  008-mybatis-sql-formatter-format-sql-log.html  009-developer-codec-tools-codec-tools.html  009-qrcode-helper-qrcode.html  010-file-workbench-file-workbench.html  010-random-data-randomdatasettings.html  app.js  codec.js  index.html  package.json  plugin-panel-matrix.html  plugin.json  styles.css  vite.config.js
output/ztools-ui-host-screenshot-captures/: manifest.json
scripts/: benchmark-macos-runtime.mjs  benchmark-search-index.mjs  benchmark-ztools-comparison.mjs  capture-ztools-ui-host-screenshots.mjs  check-macos-release-readiness.mjs  chrome-cdp-smoke-utils.mjs  pasteboardpro-release-evidence.mjs  pasteboardpro-webdav-fixture-server.mjs  plugin-package.mjs  run-test-tier.mjs  serve-ztools-ui-host-fixtures.mjs  smoke-macos-release-app.mjs  smoke-tauri-desktop.mjs  smoke-updater-package.mjs  test-about-overview.mjs  test-about-settings.mjs  test-accessibility-permission.mjs  test-agent-panel-mcp-config.mjs  test-agent-panel-mcp-install.mjs  test-ai-connection-view.mjs  test-ai-settings-overview.mjs  test-app-shortcuts.mjs  test-artifact-view.mjs  test-audit-filter-views.mjs  test-audit-view.mjs  test-builtin-calculation-paper-plugin.mjs  test-builtin-clipboard-plugin.mjs  test-builtin-codec-plugin.mjs  test-builtin-color-plugin.mjs  test-builtin-color-rust-plugin.mjs  test-builtin-hosts-plugin.mjs  test-builtin-http-client-plugin.mjs  test-builtin-ip-plugin.mjs  test-builtin-json-plugin.mjs  test-builtin-json-rust-plugin.mjs  test-builtin-plugin-bundle.mjs  test-builtin-process-manager-plugin.mjs  test-builtin-qr-plugin.mjs  test-builtin-timestamp-plugin.mjs  test-builtin-todo-plugin.mjs  (+178 more)
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/binaries/: .gitignore
src-tauri/capabilities/: default.json
src-tauri/examples/: pasteboardpro_cross_host.rs
src-tauri/icons/: icon.icns
src-tauri/native/vision-helper/: main.swift
src-tauri/resources/plugins/builtin/calculator/: index.html  plugin.json  preload.js
src-tauri/resources/plugins/builtin/clipboard/: plugin.json  preload.js
src-tauri/resources/plugins/builtin/color-picker/: plugin.json  preload.js
src-tauri/resources/plugins/builtin/encoding/: plugin.json  preload.js
src-tauri/resources/plugins/builtin/json-viewer/: plugin.json  preload.js
src-tauri/resources/plugins/builtin/qr-code/: plugin.json  preload.js
src-tauri/resources/plugins/builtin/system-commands/: plugin.json  preload.js
src-tauri/resources/plugins/builtin/timestamp/: plugin.json  preload.js
src-tauri/resources/plugins/builtin/translator/: plugin.json  preload.js
src-tauri/src/: accessibility.rs  agent_tools.rs  builtin_plugins.rs  commands.rs  crash.rs  desktop_smoke.rs  hotkey.rs  lib.rs  main.rs  mcp_server.rs  pasteboard_actions.rs  pasteboard_keychain.rs  pasteboard_macos.rs  pasteboard_native.rs  pasteboard_runtime.rs  pasteboard_sync.rs  pasteboard_vision.rs  pasteboard_window.rs  providers.rs  state.rs  tray.rs  updater.rs  webdav.rs  window.rs  ztools_import.rs
src-tauri/tests/: agent_tools_tests.rs  crash_tests.rs  pasteboard_runtime_tests.rs  pasteboard_sync_tests.rs  webdav_tests.rs  ztools_import_tests.rs
src-tauri/tests/fixtures/: pasteboard-crypto-v1.json
src/components/: AgentPanel.svelte  AppUpdatePrompt.svelte  HomeCapabilityRail.svelte  HomePanel.svelte  HomeQuickActionIcon.svelte  PasteboardDialog.svelte  QRCode.svelte  (+14 more)
(+114 files in other folders)
