[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/atools-core",
    "crates/atools-plugin",
    "crates/atools-api-shim",
]

[workspace.package]
version = "3.0.0"
edition = "2021"
authors = ["ATools Team"]
license = "MIT"
rust-version = "1.80"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# JavaScript runtime
rquickjs = { version = "0.6", features = ["bindgen", "loader", "parallel", "classes", "properties"] }

# Utilities
once_cell = "1.19"
parking_lot = "0.12"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
regex = "1"
pinyin = "0.10"
