[package]
name = "atools"
version.workspace = true
edition.workspace = true

[lib]
name = "atools_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
atools-core = { path = "../crates/atools-core" }
atools-plugin = { path = "../crates/atools-plugin" }
atools-api-shim = { path = "../crates/atools-api-shim" }

tauri = { version = "2", features = ["protocol-asset", "tray-icon", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-http = "2"
tauri-plugin-updater = "2.10.1"
async-trait.workspace = true
semver = "1"

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
dirs.workspace = true
uuid.workspace = true
base64 = "0.22"
aes-gcm = "0.10"
scrypt = "0.11"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "webp", "tiff"] }
icns = { version = "0.4", default-features = false, features = ["pngio"] }
sha2 = "0.10"
ed25519-dalek = "2.1"
url = { version = "2", default-features = false }
get_if_addrs = "0.5.3"
gethostname = "1"
libc = "0.2"
sysinfo = { version = "0.37.2", default-features = false, features = ["system"] }
meval = "0.2"
chrono = { version = "0.4", default-features = true }
percent-encoding = "2"
qrcode = { version = "0.14", default-features = false, features = ["image"] }
zip = { version = "2.4", default-features = false, features = ["deflate"] }
brotli = "8"
flate2 = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", default-features = false }
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "NSApplication", "NSBitmapImageRep", "NSImage", "NSImageRep", "NSPasteboard", "NSPasteboardItem", "NSRunningApplication", "NSWorkspace"] }
objc2-core-graphics = { version = "0.3", default-features = false, features = ["CGEvent"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["NSArray", "NSData", "NSDictionary", "NSString"] }
objc2-vision = { version = "0.3", default-features = false, features = ["std", "VNObservation", "VNRecognizeTextRequest", "VNRequest", "VNRequestHandler"] }
core-graphics = "0.25"

[dev-dependencies]
tempfile = "3.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]
