[package]
name = "atools-api-shim"
version.workspace = true
edition.workspace = true

[dependencies]
atools-core = { path = "../atools-core" }
atools-plugin = { path = "../atools-plugin" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
dirs.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile = "3.10"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
