[package]
name = "atools-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
dirs.workspace = true
uuid.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile = "3.10"
