[package]
name = "atools-plugin"
version.workspace = true
edition.workspace = true

[dependencies]
atools-core = { path = "../atools-core" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
dirs.workspace = true
uuid.workspace = true
rquickjs.workspace = true
crossbeam-channel = "0.5"

[dev-dependencies]
tempfile = "3.10"
